@@ -1,13 +1,15 @@
+Fix X11 resource unavailable crash (?)
 Make Stack more flexible, it's a fixed-length array.
+Show noisemakers on map and sonar
 
 AI stuff
-  There should be different types of AI (passive and agressive)
+  Convoy ships should scatter when an attack begins
+  There should be different types of AI (convoy, passive and agressive)
   Warships should hunt enemies.
 
 Add sounds
 
 Active sonar
-Maybe we should be able to cut the towed array
 
 Add thermal layer?
 
