@@ -5,20 +5,22 @@ will be involved in a mission.
 
 The format for the ships files goes like this:
 
-Type Class Friend Speed Depth Heading Latitude Longitude 
+Type Class Friend Speed Depth Heading Latitude Longitude Sonar Mood
 
 Type determines submarine (0) or ship (1)
 Class must match to a class from the "ships" directory.
 Friend tells us which side the ship is on. Zero is a FOE, 1 is a Friend,
        2 is unknown and 3 is neutral.
 Speed is in knots, heading in degrees, depth is in feet.
+Possible moods are Convoy (maintain formation), Attack (hunt for enemies)
+and Passive (try to stay out of the way).
 
 The follwing example shows us two ships. The first is a friendly submarine
 traveling at 5 knots at 47 feet, due east. The second entry is a surface
 ship (merchant class) traveling at 15 knotes south-west.
 
 0 1 1 5.0 47 90 150000 150000 75.0 1
-1 4 3 15.0 0 230 140000 170000 115.0 1
+1 4 3 15.0 0 230 140000 170000 115.0 1 Passive
 
 
 
