@@ -1,6 +1,6 @@
 0 1 1 5 47 90 150000 150000 75.0 
-0 2 0 15 500 70 165000 165000 75.0 
-1 4 3 15 0 230 170000 170000 115.0 
-1 4 3 15 0 230 140000 140000 115.0
-1 4 3 15 0 230 170000 140000 115.0
-1 4 3 15 0 230 140000 170000 115.0
+0 2 0 15 500 70 165000 165000 75.0 Attack
+1 4 3 15 0 230 170000 170000 115.0 Passive
+1 4 3 15 0 230 140000 140000 115.0 Passive
+1 4 3 15 0 230 170000 140000 115.0 Passive
+1 4 3 15 0 230 140000 170000 115.0 Passive
